--- a/MVCproject1b/MVCproject1b.csproj
+++ b/MVCproject1b/MVCproject1b.csproj
@@ -163,6 +163,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Others\Details.cshtml" />
+    <Content Include="Views\Home\Others\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
